# CMake

./: .gitmodules  CICD.txt  README.md
.github/workflows/: Proj_002.yml  main.yml
Pro_001/: CMakeLists.txt  Note.md  README.md
Pro_002/: .gitignore  CMakeLists.txt  README.MD  Versionconfig.h.in  build_proj.sh
Pro_002/inc/: Mod_1.hpp
Pro_002/src/: Mod_1.cpp  main.cpp
Pro_002/test/: Test_Mod1.cpp
Pro_003/: CMakeLists.txt  README.MD  Versionconfig.h.in  build_proj.sh
Pro_003/Module_0/: CMakeLists.txt
Pro_003/Module_0/inc/: Mod_0.hpp
Pro_003/Module_0/src/: Mod_0.cpp
Pro_003/src/: main.cpp
Pro_004/: Code_entry.c  README.md
Pro_005/: CMakeLists.txt  README.md
Pro_005/src/: Mod_1.cpp  main.cpp
Pro_005/test/: Test_Mod1.cpp
